--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,6 @@
 <h1>Hi Saar, Let's experiment</h1>
 <script>
-let a=prompt('How much?')
-Document.write(a)
+let a=prompt('How much?');
+document.write(a);
 
 </script>
