--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,9 @@
 <h1>Hi Saar, Let's experiment</h1>
-<script javascript>
+<script type="text/javascript">
 var a=prompt('How much?');
+var source = document.getElementById("customfield_00001");
+var dest = document.getElementById("customfield_00002");
+
 document.write(<h1>a</h1>);
 
 </script>
